--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   ga('create', 'UA-87320911-1', 'auto');
   ga('send', 'pageview');
-
 </script>
+
 </head>
 <body>
 <div id="layout-content" style="margin-top:25px">
@@ -165,18 +165,15 @@
 
 <div id="footer">
 	<div id="footer-text"></div>
-	
         <p><center>
       	<div id="clustrmaps-widget" style="width:10%">
-     
-      	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=FF2zR4KR625rREtKSURq3BrUAQIoHTFUm_j1pf6EAtU"></script>
-		
+		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=wqRaVUI2MAtD2jUaE9nacGIJuhOtnMyYPFP9kaKVCrs"></script>
         </div>
 	<p><center><font face="Arial">
         <br>
             &copy; Jian Wang | Last updated: June 2020
-        </font></center></p>
-		
+		</font></center>
+	</p>		
 </div>
-</body></html>
 
+</body></html>
