--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
 <meta name="description" content="Jian Wang's Homepage">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Jian Wang's Homepage</title>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-168212058-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-168212058-1');
-</script>
 
 </head>
 <body>
@@ -39,7 +30,7 @@
 					<br>
 					<a href="https://iwangjian.github.io/JianWang.pdf">[Resume]</a>  <a href="https://github.com/iwangjian">[Github]</a>
 				</font></p>
-				<!--<p> <a href="https://scholar.google.com/citations?user=tUb4J0kAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
+				<!--<p> <a href="https://scholar.google.com/"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/iwangjian"><img src="./pic/github_s.jpg" height="20px" style="margin-bottom:-3px"></a>
 				</p> -->
 			</td>
