--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<br>
 					<em>Email: <a href="mailto:cs_wangjian@mail.scut.edu.cn">cs_wangjian@mail.scut.edu.cn</a></em> <br>
 					<br>
-					<a href="https://iwangjian.github.io/JianWang.pdf">[Resume]</a>  <a href="https://github.com/iwangjian">[Github]</a>
+					<a href="https://iwangjian.github.io/material/JianWang.pdf">[Resume]</a>  <a href="https://github.com/iwangjian">[Github]</a>
 				</font></p>
 				<!--<p> <a href="https://scholar.google.com/"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/iwangjian"><img src="./pic/github_s.jpg" height="20px" style="margin-bottom:-3px"></a>
@@ -85,7 +85,8 @@
             <a href="https://doi.org/10.1007/s13042-020-01133-3">Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</a> <br> 
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 	        <i>International Journal of Machine Learning and Cybernetics</i> (<b>JMLC</b>, JCR Q1), 2020. <br>
-	        [<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
+			[<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
+			[<a href="https://iwangjian.github.io/material/JMLC-CETM.pdf">PDF</a>]
 	    </font></p> 
 	</li>
 
