--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
    <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
       [06/2020] Doctoral Consortium Award of CVPR 2020 <br>
       [02/2020] One paper accepted to CVPR 2020 <br>
-      [10/2019] Best Oral Presentation Award of Hong Kong Computer Vision Workshop 2019 <br>
    </font></p>
 </ul>
 -->
@@ -72,10 +71,11 @@
 <p><font face="Arial" size="4"><b>2020</b></font></p> 
 <ul>
     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <a href="https://arxiv.org/abs/1912.07491">Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</a> <br> 
+            <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453">Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</a> <br> 
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
-	        <i>Proceedings of the 34th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), accepted, 2020. <br>
-		    [<a href="https://arxiv.org/pdf/1912.07491.pdf">arXiv</a>]
+	        <i>Proceedings of the 34th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2020. <br>
+			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
+			[<a href="https://iwangjian.github.io/material/AAAI-TransDG.pdf">PDF</a>]
 		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
 	    </font></p> 
 	</li>	
