--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<br>
 					<em>Email: <a href="mailto:cs_wangjian@mail.scut.edu.cn">cs_wangjian@mail.scut.edu.cn</a></em> <br>
 					<br>
-					<a href="https://iwangjian.github.io/material/JianWang.pdf">[Resume]</a>  <a href="https://github.com/iwangjian">[Github]</a>
+					<a href="https://iwangjian.github.io/material/Jian_Wang.pdf">[Resume]</a>  <a href="https://github.com/iwangjian">[Github]</a>
 				</font></p>
 				<!--<p> <a href="https://scholar.google.com/"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/iwangjian"><img src="./pic/github_s.jpg" height="20px" style="margin-bottom:-3px"></a>
@@ -75,7 +75,7 @@
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 	        <i>Proceedings of the 34th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2020. <br>
 			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
-			[<a href="https://iwangjian.github.io/material/AAAI-TransDG.pdf">PDF</a>]
+			[<a href="https://iwangjian.github.io/material/AAAI_TransDG.pdf">PDF</a>]
 		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
 	    </font></p> 
 	</li>	
@@ -86,7 +86,7 @@
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 	        <i>International Journal of Machine Learning and Cybernetics</i> (<b>JMLC</b>, JCR Q1), 2020. <br>
 			[<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
-			[<a href="https://iwangjian.github.io/material/JMLC-CETM.pdf">PDF</a>]
+			[<a href="https://iwangjian.github.io/material/JMLC_CETM.pdf">PDF</a>]
 	    </font></p> 
 	</li>
 
