--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 					<br>
 					<em>Email: <a href="mailto:cs_wangjian@mail.scut.edu.cn">cs_wangjian@mail.scut.edu.cn</a></em> <br>
 					<br>
-					<a href="https://iwangjian.github.io/material/Jian_Wang.pdf">[Resume]</a>  <a href="https://github.com/iwangjian">[Github]</a>
+					<a href="https://iwangjian.github.io/material/Jian_Wang.pdf"><img src="./pic/cv.png" height="20px" style="margin-bottom:-3px">[Curriculum Vitae]</a> &nbsp
+					<a href="https://github.com/iwangjian"><img src="./pic/github.jpg" height="20px" style="margin-bottom:-3px">[Github]</a> &nbsp
+					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="./pic/google_scholar.png" height="20px" style="margin-bottom:-3px">[Google Scholar]</a>
 				</font></p>
-				<!--<p> <a href="https://scholar.google.com/"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://github.com/iwangjian"><img src="./pic/github_s.jpg" height="20px" style="margin-bottom:-3px"></a>
-				</p> -->
+			
 			</td>
 			<td>
 				<img src="./pic/jwang.jpg" border="0" width="300"><br>
@@ -100,6 +100,11 @@
 			Supervisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>
 	    </font></p> 
 	</li>
+	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		2020.07 -- Present: Research intern at Rulai Inc. <br>
+		Supervisor: Prof. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>
+	</font></p> 
+</li>
 
 </ul>
 
@@ -160,7 +165,7 @@
         </div>
 	<p><center><font face="Arial">
         <br>
-            &copy; Jian Wang | Last updated: June 2020
+            &copy; Jian Wang | Last updated: Aug. 2 2020
 		</font></center>
 	</p>		
 </div>
