--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					South China University of Technology, <br>
 					Guangzhou, China. <br>
 					<br>
-					<em>Email: <a href="mailto:cs_wangjian@mail.scut.edu.cn">cs_wangjian@mail.scut.edu.cn</a></em> <br>
+					<b>Email</b>: <tt>cs_wangjian@mail.scut.edu.cn</tt> &nbsp or  &nbsp<tt>jwanglvy@gmail.com</tt> <br>
 					<br>
 					<a href="https://iwangjian.github.io/material/Jian_Wang.pdf"><img src="./pic/cv.png" height="20px" style="margin-bottom:-3px">[Curriculum Vitae]</a> &nbsp
 					<a href="https://github.com/iwangjian"><img src="./pic/github.jpg" height="20px" style="margin-bottom:-3px">[Github]</a> &nbsp
@@ -104,8 +104,7 @@
 		2020.07 -- Present: Research intern at Rulai Inc. <br>
 		Supervisor: Prof. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>
 	</font></p> 
-</li>
-
+    </li>
 </ul>
 
 
@@ -149,13 +148,30 @@
 	      </font> </p>
     </li>
 	
-	 <li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
               <strong> Reading List on NLP </strong> [<a href="https://github.com/iwangjian/Paper-Reading">link</a>] </font> 
 		</p> 
 	</li>
-
 </ul>
-		
+
+
+<h2><font face="Arial"> Miscellaneous </font> </h2>
+<ul>
+    <li> <p><font face="Arial" size="3"><meta charset="utf-8">
+		  I enjoy Chinese calligraphy & most of outdoor sports (especially basketball, table tennis, badminton). I also 
+		  spend a lot of time on reading & movies. 
+	    </font></p> 
+	</li>
+	<li> <p><font face="Arial" size="3"><meta charset="utf-8">
+		I dream to travel around China, I also dream to travel around the world someday.
+	</font></p> 
+	</li>
+	<li> <p><font face="Arial" size="3"><meta charset="utf-8">
+		To be a better man, to make my family a better life, to do valuable things for our society.
+	</font></p> 
+    </li>
+</ul>
+
 
 <div id="footer">
 	<div id="footer-text"></div>
