--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <h2><font face="Arial"> Biography </font></h2>
 <p style="text-align:justify";><font face="Arial">
 	I received my M.Eng. degree from the School of Computer Science and Engineering, 
-	<a href="https://www.scut.edu.cn/en/">South China University of Technology (SCUT)</a>, supervised by Prof. <a href="http://www2.scut.edu.cn/cs/2017/0629/c22284a328083/page.htm" target="_blank">
+	<a href="https://www.scut.edu.cn/en/">South China University of Technology (SCUT)</a> in 2020, supervised by Prof. <a href="http://www2.scut.edu.cn/cs/2017/0629/c22284a328083/page.htm" target="_blank">
 	Kejing He</a>. I was a research intern at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a> from Aug. 2018 to Sep. 2019, supervised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>. 
 	Before that, I received my B.Eng. degree from the School of Computer Science and Engineering, South China University of Technology in 2017.
 </font></p>
