--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1><font face="Arial"> Jian Wang </font></h1>  <h1><font face="Arial"> 王健 </font></h1>
+					<h1> Jian Wang </h1>  <h1> 王健 </h1>
 				</div>
 
-				<h3><font face="Arial"> Master Student </font></h3>
-				<p><font face="Arial"> 
+				<h3>Master Student </h3>
+				<p><font size="3.5">
 					Room B3-534, School of Computer Science and Engineering, <br>
 					South China University of Technology, <br>
 					Guangzhou, China. <br>
@@ -31,7 +31,8 @@
 					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="./pic/cv.png" height="20px" style="margin-bottom:-3px">[Curriculum Vitae]</a> &nbsp
 					<a href="https://github.com/iwangjian"><img src="./pic/github.jpg" height="20px" style="margin-bottom:-3px">[Github]</a> &nbsp
 					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="./pic/google_scholar.png" height="20px" style="margin-bottom:-3px">[Google Scholar]</a>
-				</font></p>
+				</font>
+				</p>
 			
 			</td>
 			<td>
@@ -42,14 +43,14 @@
 </table>
 
 
-<h2><font face="Arial"> Biography </font></h2>
-<p style="text-align:justify";><font face="Arial">
+<h2>Biography </h2>
+<p style="text-align:justify";><font size="3.5">
 	I received my M.Eng. degree from the School of Computer Science and Engineering, 
 	<a href="https://www.scut.edu.cn/en/">South China University of Technology (SCUT)</a> in 2020, supervised by Prof. <a href="http://www2.scut.edu.cn/cs/2017/0629/c22284a328083/page.htm" target="_blank">
 	Kejing He</a>. I was a research intern at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a> from Aug. 2018 to Sep. 2019, supervised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>. 
 	Before that, I received my B.Eng. degree from the School of Computer Science and Engineering, South China University of Technology in 2017.
 </font></p>
-<p style="text-align:justify";><font face="Arial">
+<p style="text-align:justify";><font size="3.5">
 	My research interests mainly lie in <b>Natural Language Processing (NLP)</b>, 
 	with special emphasis on <b>dialogue systems</b>, <b>natural language generation</b>, and <b>knowledge graph</b>. 
 	Recently, I am dedicated to incorporate commonsense knowledge and pre-trained languages models into dialogue generation.
@@ -68,19 +69,19 @@
 <!--
 <h2><font face="Arial"> Publications </font>  <font face="Arial" size="3"><a href="">[Google Scholar]</a></font> </h2>
 -->
-<h2><font face="Arial"> Publications </font>  </h2>
-<p><font face="Arial" size="4"><b>2020</b></font></p> 
+<h2> Publications </h2>
+<p><font size="3.5"><b>2020</b></font></p> 
 <ul>
-	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-		<a href="">Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</a> <br> 
+	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font size="3.5"><meta charset="utf-8">
+		<a href="https://www.aclweb.org/anthology/2020.coling-main.362/"><b>Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</b></a> <br> 
 		<b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 		<i>Proceedings of the 28th International Conference on Computational Linguistics</i> (<b>COLING</b>), 2020. <br>
 		[<a href="https://iwangjian.github.io/pdf/COLING20_DDMN.pdf">PDF</a>]
 		[<a href="https://github.com/siat-nlp/DDMN">code</a>] 
 	    </font></p> 
     </li>
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453">Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</a> <br> 
+    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font size="3.5"><meta charset="utf-8">
+            <a href="https://aaai.org/ojs/index.php/AAAI/article/view/6453"><b>Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</b></a> <br> 
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 	        <i>Proceedings of the 34th AAAI Conference on Artificial Intelligence</i> (<b>AAAI</b>), 2020. <br>
 			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
@@ -88,8 +89,8 @@
 		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
 	    </font></p> 
 	</li>	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
-            <a href="https://doi.org/10.1007/s13042-020-01133-3">Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</a> <br> 
+    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font size="3.5"><meta charset="utf-8">
+            <a href="https://doi.org/10.1007/s13042-020-01133-3"><b>Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</b></a> <br> 
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 	        <i>International Journal of Machine Learning and Cybernetics</i> (<b>JMLC</b>, JCR Q1), 2020. <br>
 			[<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
@@ -100,24 +101,24 @@
 </ul>
 
 
-<h2><font face="Arial"> Experience </font> </h2>
+<h2> Experience </h2>
 <ul>
-	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font size="3.5"><meta charset="utf-8">
 		    2020.07 -- 2020.10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a> <br>
-		    Mentor: Prof. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>
-	</font></p> 
+		    Supervisor: Prof. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>
+	</font></p>
     </li>
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font size="3.5"><meta charset="utf-8">
 			2018.08 -- 2019.09: Research intern at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a><br>
-			Mentor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>
+			Supervisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>
 	    </font></p> 
 	</li>
 </ul>
 
 
-<h2><font face="Arial"> Honors &amp; Awards </h2>
+<h2>Honors &amp; Awards </h2>
 <ul style="list-style-type:none">
-<p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;"> <font face="Arial" size="3">
+<p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;"> <font size="3.5">
 
 <li>AAAI 2020 Student Scholarship <div style="float:right; text-align:right">2020</div>
 </li>
@@ -138,42 +139,43 @@
 </ul>
 
 
-<h2><font face="Arial"> Professional Activities </font></h2>
+<h2>Professional Activities </h2>
 <ul style="list-style-type:none"> 
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-              <strong> Teaching </strong> <br> </font> </p>
-		<p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-			Teaching assistant for <i>Algorithm Design and Analysis</i>, SCUT, Spring 2018 <br>
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font size="3.5"><meta charset="utf-8">
+			  <strong> Teaching </strong> <br> 
+		</font> </p>
+		<p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3.5"><meta charset="utf-8">
+			Teaching assistant for <i>Design and Analysis of Algorithm</i>, SCUT, Spring 2018 <br>
 			Teaching assistant for <i>Advanced Language Program Design (C++)</i>, SCUT, Fall 2017
 		</font> </p> 
     </li>
 	
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font size="3.5"><meta charset="utf-8">
               <strong>  Conference Reviews </strong> <br> </font> </p> 
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
+	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3.5"><meta charset="utf-8">
 		  COLING'2020
 	      </font> </p>
     </li>
 	
-	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font size="3.5"><meta charset="utf-8">
               <strong> Reading List on NLP </strong> [<a href="https://github.com/iwangjian/Paper-Reading">link</a>] </font> 
 		</p> 
 	</li>
 </ul>
 
 
-<h2><font face="Arial"> Miscellaneous </font> </h2>
+<h2> Misc. </h2>
 <ul>
-    <li> <p><font face="Arial" size="3"><meta charset="utf-8">
+    <li> <p><font size="3.5"><meta charset="utf-8">
 		  I enjoy Chinese calligraphy & most of outdoor sports (especially basketball, table tennis, badminton). I also 
 		  spend a lot of time on reading & movies. 
-	    </font></p> 
+	</font></p> 
 	</li>
-	<li> <p><font face="Arial" size="3"><meta charset="utf-8">
+	<li> <p><font size="3.5"><meta charset="utf-8">
 		I dream to travel around China, I also dream to travel around the world someday.
 	</font></p> 
 	</li>
-	<li> <p><font face="Arial" size="3"><meta charset="utf-8">
+	<li> <p><font size="3.5"><meta charset="utf-8">
 		To be a better man, to make my family a better life, to do valuable things for our society.
 	</font></p> 
     </li>
@@ -186,10 +188,10 @@
       	<div id="clustrmaps-widget" style="width:10%">
 		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=wqRaVUI2MAtD2jUaE9nacGIJuhOtnMyYPFP9kaKVCrs"></script>
         </div>
-	<p><center><font face="Arial">
+	<p><center>
         <br>
-            &copy; Jian Wang | Last updated: Nov. 18, 2020
-		</font></center>
+            &copy; Jian Wang | Last updated: Dec. 2, 2020
+		</center>
 	</p>		
 </div>
 
