--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1> Jian Wang </h1>  <h1> 王健 </h1>
+					<h1> Jian Wang (王健) </h1> 
 				</div>
 
 				<h3>Master Student </h3>
@@ -162,7 +162,7 @@
     </li>
 	
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-              <strong> Reading List on NLP </strong> [<a href="https://github.com/iwangjian/Paper-Reading">link</a>] 
+              <strong> Reading List in NLP </strong> [<a href="https://github.com/iwangjian/Paper-Reading">link</a>] 
 		</p> 
 	</li>
 </ul>
