--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 				<h3>Master Student </h3>
 				<p>
-					School of Computer Science and Engineering, <br>
-					South China University of Technology, <br>
-					Guangzhou, China. <br>
+					PQ719, Department of Computing, <br>
+					The Hong Kong Polytechnic University, <br>
+					Hung Hom, Kowloon, Hong Kong SAR, China <br>
 					<br>
-					<b>Email</b>: <tt>cs_wangjian@mail.scut.edu.cn</tt> &nbsp or  &nbsp<tt>jwanglvy@gmail.com</tt> <br>
+					<b>Email</b>: <tt>csjiwang@comp.polyu.edu.hk</tt> &nbsp or  &nbsp<tt>jwanglvy@gmail.com</tt> <br>
 					<br>
 					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="./pic/cv.png" height="20px" style="margin-bottom:-3px">[Curriculum Vitae]</a> &nbsp
 					<a href="https://github.com/iwangjian"><img src="./pic/github.jpg" height="20px" style="margin-bottom:-3px">[Github]</a> &nbsp
@@ -55,7 +55,7 @@
 <p style="text-align:justify";>
 	My research interests mainly lie in <b>Natural Language Processing (NLP)</b>, 
 	with special emphasis on <b>dialogue systems</b>, <b>natural language generation</b>, and <b>knowledge graph</b>. 
-	Recently, I am dedicated to incorporate commonsense knowledge and pre-trained language models into dialogue generation.
+	Recently, I am dedicated to knowledge-enhanced dialogue generation and recommendation-oriented dialogue systems.
 </p>
 
 <!--
