--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
     </li>
 	
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-              <strong>  Conference Reviews </strong> <br> </p> 
+              <strong>  Conference Reviewer </strong> <br> </p> 
 	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-		  COLING'2020
+		  EMNLP'21, COLING'20
 	      </p>
     </li>
 	
