--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<meta name="keywords" content="Jian Wang, wang jian, iwangjian, scut, South China University of Technology"> 
+<meta name="keywords" content="Jian Wang, wang jian, iwangjian"> 
 <meta name="description" content="Jian Wang's Homepage">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Jian Wang's Homepage</title>
@@ -28,7 +28,7 @@
 					<br>
 					<b>Email</b>: <tt>csjiwang@comp.polyu.edu.hk</tt> &nbsp or  &nbsp<tt>jwanglvy@gmail.com</tt> <br>
 					<br>
-					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="./pic/cv.png" height="20px" style="margin-bottom:-3px">[Curriculum Vitae]</a> &nbsp
+					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="./pic/cv.png" height="20px" style="margin-bottom:-3px" >[Curriculum Vitae]</a> &nbsp
 					<a href="https://github.com/iwangjian"><img src="./pic/github.jpg" height="20px" style="margin-bottom:-3px">[Github]</a> &nbsp
 					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="./pic/google_scholar.png" height="20px" style="margin-bottom:-3px">[Google Scholar]</a>
 				
@@ -36,7 +36,7 @@
 			
 			</td>
 			<td>
-				<img src="./pic/jwang.jpg" border="0" width="300"><br>
+				<img src="./pic/jwang.jpg" id="potrait" width="300"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
@@ -58,19 +58,7 @@
 	Recently, I am dedicated to knowledge-enhanced dialogue generation and recommendation-oriented dialogue systems.
 </p>
 
-<!--
-<h2><font face="Arial"> News </font></h2>
-<ul style="list-style-type:none">
-   <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-      [06/2020] Doctoral Consortium Award of CVPR 2020 <br>
-      [02/2020] One paper accepted to CVPR 2020 <br>
-   </font></p>
-</ul>
--->
 
-<!--
-<h2><font face="Arial"> Publications </font>  <font face="Arial" size="3"><a href="">[Google Scholar]</a></font> </h2>
--->
 <h2> Publications </h2>
 <p><b>2020</b></p> 
 <ul>
@@ -186,11 +174,12 @@
       	<div id="clustrmaps-widget" style="width:10%">
 		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=wqRaVUI2MAtD2jUaE9nacGIJuhOtnMyYPFP9kaKVCrs"></script>
         </div>
-	<p><center>
-        <br>
-            &copy; Jian Wang | Last updated: Mar. 11, 2021
+	<p>
+		<center>
+        <br> &copy; Jian Wang | Last updated: Mar. 11, 2021
 		</center>
 	</p>		
 </div>
 
-</body></html>
+</body>
+</html>
