--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
 					<br>
 					<b>Email</b>: <tt>csjiwang@comp.polyu.edu.hk</tt> &nbsp or  &nbsp<tt>jwanglvy@gmail.com</tt> <br>
 					<br>
-					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="./pic/cv.png" height="20px" style="margin-bottom:-3px" >[Curriculum Vitae]</a> &nbsp
-					<a href="https://github.com/iwangjian"><img src="./pic/github.jpg" height="20px" style="margin-bottom:-3px">[Github]</a> &nbsp
-					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="./pic/google_scholar.png" height="20px" style="margin-bottom:-3px">[Google Scholar]</a>
+					<a href="https://iwangjian.github.io/pdf/Jian_Wang_CV.pdf"><img src="pic/cv-96.png" height="25px" style="margin-bottom:-3px" >[Curriculum Vitae]</a> &nbsp
+					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-3px">[Github]</a> &nbsp
+					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="pic/google-scholar-96.png" height="25px" style="margin-bottom:-3px">[Google Scholar]</a> &nbsp
+					<a href="https://twitter.com/jwanglvy"><img src="pic/twitter-90.png" height="25px" style="margin-bottom:-3px">[Twitter]</a>
 				
 				</p>
 			
 			</td>
 			<td>
-				<img src="./pic/jwang.jpg" id="potrait" width="300"><br>
+				<img src="pic/jwang.jpg" id="potrait" width="300"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
@@ -55,7 +56,7 @@
 <p style="text-align:justify";>
 	My research interests mainly lie in <b>Natural Language Processing (NLP)</b>, 
 	with special emphasis on <b>dialogue systems</b>, <b>natural language generation</b>, and <b>knowledge graph</b>. 
-	Recently, I am dedicated to knowledge-enhanced dialogue generation and recommendation-oriented dialogue systems.
+	Recently, I am dedicated to knowledge enhanced dialogue and recommendation oriented dialogue.
 </p>
 
 
@@ -151,11 +152,26 @@
     </li>
 	
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-              <strong> Reading List in NLP </strong> [<a href="https://github.com/iwangjian/Paper-Reading">link</a>] 
+              <strong> Open-Source Projects </strong> <br>
+		</p>
+		<p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
+			<a href="https://github.com/iwangjian/Paper-Reading">📖 Paper-Reading</a>: Reading list in NLP, including dialogue systems, text generation, and related topics. <br>
+			<a href="https://github.com/iwangjian/pyloader">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets, supporting PyTorch and TensorFlow. 
 		</p> 
 	</li>
 </ul>
 
+<h2>Useful Resources</h2>
+<ul style="list-style-type:none">
+<p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;"><meta charset="utf-8">
+	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
+	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality">👩‍🎓👨‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI. </li>
+	<li> <a href="https://www.bilibili.com/video/BV18v411n7mr">📝 Writing Perfect Papers</a>: A long talk on how to write perfect papers (by Prof. Baochun Li @UofT). </li>
+	<li> <a href="https://ruder.io/">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog about NLP/ML/DL.</li>
+	<li> <a href="https://jalammar.github.io/">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
+	<li> <a href="https://lilianweng.github.io/lil-log/">🍑 Lilian Weng's Blog</a>: Deep insights for many DL/NLP problems.</li>
+</p>
+</ul>
 
 <h2> Misc. </h2>
 <ul>
@@ -177,7 +193,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last updated: Jun. 22, 2021
+        <br> &copy; Jian Wang | Last updated: Jul. 23, 2021
 		</center>
 	</p>		
 </div>
