--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
 
 
 <h2> Publications </h2>
-<p><b>2020</b></p> 
+<p><b>2021</b></p>
+<ul>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
+		Template-guided Clarifying Question Generation for Web Search Clarification <br> 
+		<b>Jian Wang</b> and Wenjie Li. <br> 
+		<i>Proceedings of the 30th ACM International Conference on Information and Knowledge Manage</i> (<b>CIKM</b>), 2021. <br>
+		[<a href="https://iwangjian.github.io/pdf/CIKM21_TG-ClariQ.pdf">PDF</a>]
+		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>] 
+	    </p> 
+    </li>
+</ul>
+<p><b>2020</b></p>
 <ul>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
 		<a href="https://www.aclweb.org/anthology/2020.coling-main.362/">Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</a> <br> 
@@ -193,7 +204,7 @@
         </div>
 	<p>
 		<center>
-        <br> &copy; Jian Wang | Last updated: Jul. 23, 2021
+        <br> &copy; Jian Wang | Last updated: Aug. 15, 2021
 		</center>
 	</p>		
 </div>
