--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
 		Template-guided Clarifying Question Generation for Web Search Clarification <br> 
 		<b>Jian Wang</b> and Wenjie Li. <br> 
-		<i>Proceedings of the 30th ACM International Conference on Information and Knowledge Manage</i> (<b>CIKM</b>), 2021. <br>
+		<i>Proceedings of the 30th ACM International Conference on Information and Knowledge Management</i> (<b>CIKM</b>), 2021. <br>
 		[<a href="https://iwangjian.github.io/pdf/CIKM21_TG-ClariQ.pdf">PDF</a>]
 		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>] 
 	    </p> 
