--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 					<h1> Jian Wang (王健) </h1> 
 				</div>
 
-				<h3>Research Assistant</h3>
+				<h3>PhD Student</h3>
 				<p>
 					PQ719, Department of Computing, <br>
 					The Hong Kong Polytechnic University, <br>
-					Hung Hom, Kowloon, Hong Kong SAR, China <br>
+					Hung Hom, Kowloon, Hong Kong, China <br>
 					<br>
 					<b>Email</b>: <tt>csjiwang@comp.polyu.edu.hk</tt> &nbsp or  &nbsp<tt>jwanglvy@gmail.com</tt> <br>
 					<br>
@@ -46,7 +46,7 @@
 
 <h2>Biography </h2>
 <p style="text-align:justify";>
-	I am a research assistant at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a>, 
+	I am a first-year PhD student at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a>, 
 	under the supervision of Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Wenjie Li</a>.
 	I received my M.Eng. degree and B.Eng. degree from the School of Computer Science and Engineering, 
 	<a href="https://www.scut.edu.cn/en/">South China University of Technology (SCUT)</a> in 2020 and 2017, respectively. 
@@ -150,8 +150,9 @@
 			  <strong> Teaching </strong> <br> 
 		</p>
 		<p style="margin-left: 20px; line-height: 140%; margin-top: 8px; margin-bottom: 8px;"><meta charset="utf-8">
-			Teaching assistant for <i>Design and Analysis of Algorithm</i>, &nbsp &nbsp SCUT, Spring 2018 <br>
-			Teaching assistant for <i>Advanced Language Program Design (C++)</i>, &nbsp &nbsp SCUT, Fall 2017
+			Teaching Assistant for <i>COMP 2021: Object-Oriented Programming</i>, Fall 2021, PolyU <br>
+			Teaching Assistant for <i>Design and Analysis of Algorithm</i>, Spring 2018, SCUT <br>
+			Teaching Assistant for <i>Advanced Language Program Design (C++)</i>, Fall 2017, SCUT
 		</p> 
     </li>
 	
