--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </table>
 
 
-<h2>Biography </h2>
+<h2>Bio.</h2>
 <p style="text-align:justify";>
 	I am a first-year PhD student at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a>, 
 	under the supervision of Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Wenjie Li</a>.
@@ -59,6 +59,21 @@
 	Recently, I am dedicated to knowledge enhanced dialogue and recommendation oriented dialogue.
 </p>
 
+<h2> Experience </h2>
+<ul>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
+			2020.11 -- 2021.08: Research assistant at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a> <br>
+			Supervisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Wenjie Li</a></p>
+	</li>
+	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
+		    2020.07 -- 2020.10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a> <br>
+		    Supervisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a></p>
+    </li>
+    <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
+			2018.08 -- 2019.09: Visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a><br>
+			Supervisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a></p> 
+	</li>
+</ul>
 
 <h2> Publications </h2>
 <p><b>2021</b></p>
@@ -103,21 +118,7 @@
 </ul>
 
 
-<h2> Experience </h2>
-<ul>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-			2020.11 -- Present: Research assistant at <a href="https://www.polyu.edu.hk/">The Hong Kong Polytechnic University (PolyU)</a> <br>
-			Supervisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Wenjie Li</a></p>
-	</li>
-	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-		    2020.07 -- 2020.10: Research intern at <a href="https://rul.ai/">Rulai Inc.</a> <br>
-		    Supervisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a></p>
-    </li>
-    <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"><meta charset="utf-8">
-			2018.08 -- 2019.09: Visiting student at <a href="http://english.siat.cas.cn/">SIAT, Chinese Academy of Sciences</a><br>
-			Supervisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a></p> 
-	</li>
-</ul>
+
 
 
 <h2>Honors / Awards </h2>
